Fix Safari mobile image stretching

--- a/src/Components/ImagePanel/imagePanel.css
+++ b/src/Components/ImagePanel/imagePanel.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-flow: column;
     justify-content: center;
-    height: 100%;
+    height: auto;
     width: 101%;
 }
